--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build and publish image
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]
     tags: [ "v*" ]
   pull_request:
     branches: [ "main" ]
